[package]
name = "sunday_match"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = {version = "0.3.5", features = ["html_reports"]}

[[bench]]
name = "sunday_match"
harness = false